syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";


message AbilityIdentifier {
	uint32 instanced_ability_id = 1;
	uint32 ability_caster_id = 2;
	int32 local_id = 3;
	uint32 instanced_modifier_id = 4;
	uint32 modifier_owner_id = 5;
	bool is_serverbuff_modifier = 6;
}
