syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 159
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message PlayerSetPauseReq {
	bool is_paused = 7;
}
